--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -50,7 +50,7 @@
 
 .about--button a button {
   all: unset; 
-  background: #ff6a6a;
+  background: #000000;
   color: #fff;
   text-decoration: none;
   border: none;
